[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-agents"
version = "1.0.17"
description = "A versatile framework for creating and managing intelligent agents."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { text = "LICENSE" }
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
dependencies = [
    "instructor>=1.3.4,<2.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "rich>=13.7.1,<14.0.0",
    "gitpython>=3.1.43,<4.0.0",
    "pyfiglet>=1.0.2,<2.0.0",
    "textual>=0.82.0,<1.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "requests>=2.32.3,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0,<25.0.0",
    "flake8>=7.1.1,<8.0.0",
    "pdoc3>=0.11.1,<1.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "openai>=1.35.12,<2.0.0"
]

[project.urls]
homepage = "https://github.com/BrainBlend-AI/atomic-agents"
repository = "https://github.com/BrainBlend-AI/atomic-agents"

[tool.black]
line-length = 127

[tool.setuptools.packages.find]
include = ["atomic_agents*", "atomic_assembler*"]

